# Rust-NN-training

./: .gitignore  Cargo.toml  README.md  json_parser.py  {artifact_dir}.mpk
aga/: prettymodel.json
models/: prettymodel.json
src/: data.rs  inference.rs  main.rs  model.rs  training.rs
tmp/guide/: config.json
tmp/guide/checkpoint/: model-100.mpk  model-99.mpk  optim-100.mpk  optim-99.mpk
